# video-diff-extractor

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
lib/: eta.hpp
lib/VQMT/: Metric.cpp  Metric.hpp  SOURCE_REPOSITORY  SSIM.cpp  SSIM.hpp  main.cpp
src/: main.cpp  main_dir.cpp
